add_executable(bench_utils bench_utils.cpp)
target_compile_options(bench_utils PRIVATE ${COMPILE_FLAGS})
target_include_directories(bench_utils PRIVATE ${TYCHO_INCLUDES} ${INCLUDE_DIRS})
target_link_libraries(bench_utils PRIVATE tycho_core ${LINK_LIBS} benchmark::benchmark_main)
target_precompile_headers(bench_utils REUSE_FROM pch)
if(UNIX)
    target_link_options(bench_utils PRIVATE ${LINKER_FLAGS})
endif()
