add_executable(bench_vector_functions bench_vector_functions.cpp)
target_compile_options(bench_vector_functions PRIVATE ${COMPILE_FLAGS})
target_include_directories(bench_vector_functions PRIVATE ${TYCHO_INCLUDES} ${INCLUDE_DIRS})
target_link_libraries(bench_vector_functions PRIVATE tycho_core ${LINK_LIBS} benchmark::benchmark_main)
target_precompile_headers(bench_vector_functions REUSE_FROM pch)
if(UNIX)
    target_link_options(bench_vector_functions PRIVATE ${LINKER_FLAGS})
endif()
